--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-REACT_APP_API_URL = "http://192.168.1.42:3000"
+REACT_APP_BASE_URL = "http://192.168.1.42:3000"
+REACT_APP_API_URL = "http://192.168.1.42:3000/api/v1"
 
 
-#http://localhost:3000
+#http://localhost:3000/api/v1
+#http://192.168.1.42:3000/api/v1
